fixed phone numbers, download app banner on mobile and favicon

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,3 +105,8 @@ a {
     color-scheme: dark;
   }
 }
+@media (max-width: 500px) {
+  .notice {
+    display: none;
+  }
+}
